[gd_scene load_steps=3 format=1]

[ext_resource path="res://res/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/World/PauseMenu/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="PanelContainer"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 64.0
margin/top = 32.0
margin/right = 416.0
margin/bottom = 192.0
script/script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 345.0
margin/bottom = 153.0
alignment = 0

[node name="Label" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 338.0
margin/bottom = 71.0
text = "PAUSED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 75.0
margin/right = 338.0
margin/bottom = 146.0
alignment = 0

[node name="RESUME" type="Button" parent="VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 142.0
margin/top = 0.0
margin/right = 195.0
margin/bottom = 18.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="TOMENU" type="Button" parent="VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 110.0
margin/top = 22.0
margin/right = 228.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Title Screen"
flat = false

[node name="QUIT" type="Button" parent="VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 121.0
margin/top = 44.0
margin/right = 216.0
margin/bottom = 62.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Desktop"
flat = false

[connection signal="pressed" from="VBoxContainer/VBoxContainer/RESUME" to="." method="_on_RESUME_pressed"]

[connection signal="pressed" from="VBoxContainer/VBoxContainer/TOMENU" to="." method="_on_TOMENU_pressed"]

[connection signal="pressed" from="VBoxContainer/VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]


